test/fixtures/configs/projects/post/new/fail/error.js
module.exports = {
  url: '/users/1/projects',
  method: 'post',
  payload: {
    title: 'error_test'
  },
  headers: {
    authorization: 'token userToken'
  }
};
